# tinysafe-2

./: .gitignore  HUGGINGFACE_README.md  README.md  infer.py  pyproject.toml
configs/: config.json
scripts/: 01_prepare_data.py  02_generate_hard_negatives.py  02b_generate_missing_categories.py  03_quality_filter.py  04_prune_and_recover.py  05_train.py  06_threshold_sweep.py  07_evaluate.py  08_export.py
src/: dataset.py  losses.py  model.py  utils.py
